dark mode fixed

--- a/client/src/components/Dashboard.module.scss
+++ b/client/src/components/Dashboard.module.scss
@@ -4,12 +4,14 @@
     flex-direction: column;
     align-items: center;
     padding-top: 10vh;
+    transition: all 1s ease-in-out;
 }
 
 h2 {
     font-size: 2em;
     margin-bottom: 20px;
 }
+
 
 .ordersList {
     width: 100%;
@@ -47,4 +49,17 @@ h2 {
 .statusButton:disabled {
     background-color: #ccc;
     cursor: not-allowed;
+}
+
+.light {
+    background-color: white;
+}
+
+.dark {
+    background-color: black;
+    color: white;
+
+    th {
+        color: black;
+    }
 }
